--- a/.github/workflows/build_containers.yaml
+++ b/.github/workflows/build_containers.yaml
@@ -2,11 +2,11 @@ name: Build and Push Singularity Images
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - '**'
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - '**'
 
